Project

General

Profile

Actions

Bug #37398

closed

linger op get lost during ceph osd pause and ceph osd unpause

Added by runsisi hust over 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
librados
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

LingerOp::target.paused has no chance to be touched by anyone (see Objecter::_send_linger),
then the following bug exists:

1. ceph osd pause
2. rados watch -p pool oid
3. ceph osd unpause
4. the linger op will be in a lost state, i.e., osd op cancelled and the linger op will not be resent


Related issues 2 (0 open2 closed)

Copied to Ceph - Backport #37552: mimic: linger op get lost during ceph osd pause and ceph osd unpauseResolvedAshish SinghActions
Copied to Ceph - Backport #37553: luminous: linger op get lost during ceph osd pause and ceph osd unpauseResolvedAshish SinghActions
Actions #2

Updated by Greg Farnum over 5 years ago

  • Status changed from New to 7
Actions #3

Updated by Sage Weil over 5 years ago

  • Status changed from 7 to Pending Backport
  • Backport set to mimic,luminous
Actions #4

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37552: mimic: linger op get lost during ceph osd pause and ceph osd unpause added
Actions #5

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37553: luminous: linger op get lost during ceph osd pause and ceph osd unpause added
Actions #6

Updated by Nathan Cutler about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF