osdc/Objecter: update op_target_t::paused in _calc_target

LingerOp::target.paused has no chance to be touched by anyone (see Objecter::_send_linger),
then the following bug exists:

1. ceph osd pause
2. rados watch -p pool oid
3. ceph osd unpause
3. the linger op will be in a lost state, i.e., osd op cancelled and the linger
   op will not be resent

Fixes: http://tracker.ceph.com/issues/37398
Signed-off-by: runsisi <luo.runbing@zte.com.cn>
(cherry picked from commit e7a23d86e0b90cfd91e7126f958c0501d537e280)